--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -5,7 +5,7 @@ block content
     include /info
     .jumbotron
       img.right.hidden-xs(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
-      h1 Welcome to OnTrac
+      h1 Welcome To OnTrac
       
       p.
         It has begun. The work, the stress, the responsibilities of Regis High School. If only there
@@ -17,7 +17,7 @@ block content
         img.visible-xs(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
         br
         b O
-        span  - Open-source 
+        span  - Open-source
         br
         
         b N
