--- a/views/advisement/list.jade
+++ b/views/advisement/list.jade
@@ -17,20 +17,20 @@ block content
             .panel-heading
               b #[a.undecorated(href="/advisements/"+ad.title)= ad.title]
               if ad.teacher
-                a.undecorated.right(href="/teachers/"+ad.teacher.mID)= "Advisor "+ad.teacher.fullName
+                span.teacher-badge.right(data-username=ad.teacher.username)= "Advisor "+ad.teacher.fullName
               else
-                span.right No Advisor Found
+                span.right Uknown Advisor
             .panel-body
               if loggedIn
                 
                 -var found = false
                 for s in ad.students
                   if s.registered
-                    a(href="/users/"+s.username)
-                      if s.username == currentUser.username
-                        b= s.fullName
-                      else
-                        span= s.fullName
+                    if s.username == currentUser.username
+                      b.user-badge(data-username=s.username) You
+                    else
+                      span.user-badge(data-username=s.username)= s.fullName
+                    
                     -found = true
                 if found == false
                   span No students in #[b= ad.title] have registered yet!
