--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
 
     title= title
     
-    link(rel="stylesheet", href="/style.css")
+    link(rel="stylesheet", href="/style.css?999")
     link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
     link(rel="stylesheet", href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css")
 
