--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -7,7 +7,9 @@ header
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href="#") OnTrac
+        a#brand.navbar-brand(href="#")
+          //img#ontrac-img(alt="Brand", src="http://i.imgur.com/edRmazN.png")
+          | OnTrac
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li(class=(title=="OnTrac" || title=="Your Home" ? "active" : ""))
