--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -1,17 +1,14 @@
 extends /layout
 
 block content
-    .container
-        .page-header
-            h1 Edit Your Profile
-        if currentUser.verified == false
-            .alert.alert-danger(role="alert") You have yet to verify your account! Your actions will be restricted until you follow the link emailed to you.
+  .container
+    .page-header
+      h1 Edit Your Profile
     
-        .row
-            form(role="form", method="POST")
-                .col-xs-12.col-sm-6.col-md-4.center-xs
-                    
-                
-        .row
-            a.btn.btn-danger(href="/users/"+currentUser.username) Cancel
-            button.btn.btn-primary Save
+    .row
+      .col-xs-12
+        form.form(role="form", method="POST")
+          .form-group
+            label(for="newbio") Bio
+            textarea.form-control#newbio(name="newbio")
+          button.btn.btn-primary Save
