Only show footer on mobile

--- a/views/parts/footer.jade
+++ b/views/parts/footer.jade
@@ -1,4 +1,4 @@
-footer
+footer.visible-xs
   nav.navbar.navbar-default.navbar-fixed-bottom
     .container
       a(href="/users/"+currentUser.username)
