Removed mobile warning alert

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -3,6 +3,7 @@ extends /layout
 block content
   .container
     include /info
+    .alert.alert-danger #[b WARNING:] OnTrac is in Alpha and should not yet be used for a reliable organization platform. Thank you for being an Alpha Tester!
     .jumbotron
       img.right.hidden-xs(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
       h1 Welcome To OnTrac
