--- a/views/info.jade
+++ b/views/info.jade
@@ -6,5 +6,4 @@ for i in errs
   script.
     setTimeout(function(){sendNotification('error', '', "#{i}");}, 500);
   
-.alert.alert-danger #[b WARNING:] OnTrac is in Alpha and should not yet be used for a reliable organization platform. Thank you for being an Alpha Tester!
-.alert.alert-danger.visible-xs #[b WARNING:] Mobile support is still shaky! That will be fixed in upcoming versions.
+//.alert.alert-danger.visible-xs #[b WARNING:] Mobile support is still shaky! That will be fixed in upcoming versions.
