--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -10,7 +10,7 @@ block content
       
       p.
         It has begun. The work, the stress, the responsibilities of Regis High School. If only there
-        was a way to make it all easier. There isn't. #[b Yet...]
+        was a way to make it all easier. Unfortunately, no such thing exists. #[b Yet...]
         
 
     .row
