Added Logging to admin clear collection

--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -58,6 +58,6 @@ block content
           .form-group
             label(for="collection") Collection
             select.form-control#dropcollection(name="collection")
-              each c in ['HWItem', 'Day', 'Grade', 'Feedback', 'Log']
+              each c in ['HWItem', 'Day', 'Grade', 'Feedback', 'Log', 'Reminder']
                 option= c
           button.btn.btn-danger Delete
