Hide view schedule on user profile on mobile

--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -87,7 +87,7 @@ block content
               span.caret
               span.sr-only Toggle Dropdown
             ul.dropdown-menu
-              li
+              li.hidden-xs
                 a(href="/users/"+user.username+"/schedule") View Schedule
               li
                 a(href="mailto:"+user.email) Email
