--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -69,7 +69,10 @@ block content
           for user in users
             tr(class=(currentUser && user.username == currentUser.username ? "success" : ""))
               td
-                img.table-pic(class=(loggedIn ? "user-badge" : ""), data-username=user.username, src=user.mpicture)
+                if user.gradeName == "Freshman"
+                  img.table-pic(class=(loggedIn ? "user-badge" : ""), data-username=user.username, src=user.mpicture)
+                else 
+                  img.table-pic(class=(loggedIn ? "user-badge" : ""), data-username=user.username, src=user.ipicture)
               td.larger(style="vertical-align: middle;")
                 a.undecorated(href="/advisements/"+user.advisement)= user.advisement
               td.larger(style="vertical-align: middle")= user.gradeName
