--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -45,3 +45,40 @@
 #chat-controls button {
   width: 80px;
 }
+
+
+
+
+
+
+#advchat {
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+}
+
+#advchat-messages {
+  height: 90%;
+  border: 1px solid red;
+}
+
+#advchat form input {
+  width: 80%;
+}
+
+#advchat form button {
+  width: 20%;
+}
+
+#advchat-online {
+  padding: 20px;
+  padding-left: 15px;
+}
+
+@media (max-width: 768px) {
+  #advchat form button, #advchat form input {
+    width: 100%;
+  }
+}
+
+#advchat-badge { display: none; }
