--- a/views/parts/footer.jade
+++ b/views/parts/footer.jade
@@ -17,7 +17,7 @@ footer.visible-xs
               span.label.label-danger.right &nbsp;&nbsp;!&nbsp;&nbsp;
           li
             a(href="/advisements/chat", title="Private chat room for your advisement!") #{currentUser.advisement} Chat
-              span.badge#advchat-badge(title="Unread messages.") 0
+              span.label.label-default.right.advchat-badge 0
           li
             a(href="#") Meetings
               //span.badge.right 0
