--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -54,12 +54,12 @@
 #advchat {
   width: 100%;
   height: 100%;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
 
 #advchat-messages {
   height: 90%;
-  border: 1px solid red;
+  /*border: 1px solid red;*/
   overflow: auto;
   word-wrap: break-word;
 }
