Implemented Muting global chat

--- a/views/chat/chatbox.jade
+++ b/views/chat/chatbox.jade
@@ -2,7 +2,7 @@
   .panel-heading
     h3.panel-title Global Chat
       small#toggle-chat.small-box(data-show="true")  (toggle)
-      small.right#users-online 0 users online
+      small.right#mute-toggle (Mute)
   #chat-messages.col-xs-12.small-box
     
   form#chat-controls.form-inline.small-box(role="form")
