--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -22,11 +22,12 @@ block content
                 #stars(title=user.firstName+" is a "+user.rankName, data-toggle="tooltip", style="color: yellow; font-size: 130%; padding-left: 3px;")
                   for s in stars
                     span.fa.fa-star
-                if user.bio
-                  blockquote
-                    p= user.bio
-                    footer #{user.fullName} 2015
               br
+            if user.bio
+              .col-xs-12.col-md-6
+                blockquote
+                  p= user.bio
+                  footer #{user.fullName} 2015
             .col-xs-12.col-sm-12.col-md-6
               .panel.panel-default
                 .panel-heading
@@ -47,6 +48,8 @@ block content
                     br
                     b User Since:
                     |  #{moment(user.registered_date).format('dddd, MMMM Do YYYY')}
+          
+            
         
         .col-xs-12.col-sm-6.col-md-6.col-lg-4
           .panel.panel-success
@@ -98,7 +101,7 @@ block content
       
 mixin class(course)
   .col-xs-12.col-sm-6.col-md-4
-    .panel.panel-default
+    .panel(title=(currentUser.sclasses.indexOf(course.mID) > -1 ? "You share this class!" : ""), class=( currentUser.sclasses.indexOf(course.mID) > -1 ? "panel-success" : "panel-default"))
       .panel-body
         h1.panel-title
           a(href="/courses/"+course.mID)= course.title
