--- a/views/advisement/one.jade
+++ b/views/advisement/one.jade
@@ -9,7 +9,7 @@ block content
     else
       .page-header
         h1 Advisement #{advisement.title}
-          small.right= (registered.length/advisement.students.length)*10+"% registered"
+          small.right= Math.round((registered.length/advisement.students.length)*10)+"% registered"
         h3 #[b= advisement.title] has #[b= registered.length] 
           | #{helpers.pluralize(registered.length, "user", "users")} registered 
           | out of #[b= advisement.students.length] and is advised by 
