Replaced some containers with container-fluid

--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -1,7 +1,7 @@
 extends /layout
 
 block content
-  .container
+  .container-fluid
     include /info
     .jumbotron
       h1.no-margin(style="text-transform: capitalize") Hello, #{currentUser.firstName}
