--- a/views/work/index.jade
+++ b/views/work/index.jade
@@ -1,10 +1,8 @@
 extends /layout
 
 block content
-  .container
+  .container-fluid
     include /info
-    
-    
     .jumbotron.no-margin
       h1.no-margin= title
       br
