--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -3,9 +3,9 @@ extends /layout
 block content
   .container
     include /info
-    if loggedIn
-      h3 Online Now: 
-        small#online-user-list
+    //if loggedIn
+    //  h3 Online Now: 
+    //    small#online-user-list
       
     .page-header
       h1(title="The cool guys.") Registered Users
