Added 'In Class' Status

--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -12,6 +12,8 @@ aside#sidebar
         li
           a(href="#") Working
         li
+          a(href="#") In Class
+        li
           a(href="#") Relaxing
         li
           a(href="#") Busy
