--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,11 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     //meta(name="description", content="")
     meta(name="author", content="Frank Matranga")
-
-    title= title
+    
+    if production == false
+      title [D] #{title}
+    else
+      title= title
     
     link(rel="stylesheet", href="/style.css?999")
     link(rel="stylesheet", href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/black-tie/jquery-ui.css")
