Unread message system for both chat

--- a/views/users/login-modal.jade
+++ b/views/users/login-modal.jade
@@ -30,3 +30,7 @@
                   span Don't believe me? See #[a(target="_blank", href="https://github.com/Apexal/ontrac/blob/master/src/routes/index.js") for yourself].
 
                 button.btn.right.btn-primary#login-button Login
+
+script.
+  sessionStorage.unread = 0;
+  sessionStorage.advunread = 0;
