--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -15,7 +15,7 @@ block content
 
     .row
       .col-xs-12.col-sm-2.center-xs
-        img.visible-xs(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
+        img.visible-xs#regis-pic(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
         br
         b O
         span  - Open-source
