Added mumble info to homepage, fixed unread count bug

--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -8,6 +8,22 @@ block content
       p.no-margin.magictime.swashIn.
         It is #[b#clock Time & Date]. Today is a #[b#today-sd ?] Schedule Day.
       span Only #[b= moment("2015-09-14").fromNow(true)] until school starts.
+    
+    .row
+      .col-xs-12
+        b.larger Looking to talk with classmates?
+        p.
+          Install #[b #[a(target="_blank", href="http://wiki.mumble.info/wiki/Main_Page#Download_Mumble") Mumble]],
+          a light-weight, free voice-chat application for communicating with classmates.
+          Perfect for #[b getting homework help, collaborating on projects, gaming with friends, or just talking]. I'm also usually
+          on every night, so if you have a question about the site you can hop on
+          and ask me directly.
+        p.
+          Once installed, 
+          join the #[b Unofficial Regis Mumble Server] #[i (run by me)]
+          #[b #[a.undecorated(href="mumble://"+currentUser.username+":regis@regismumble.ddns.net/Work?version=1.2.0") here]].
+        br
+    
     .row
       .col-xs-12
         include tabs
