--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -37,6 +37,9 @@ block content
                   h1.panel-title  Info
                 .panel-body
                   .user-info
+                    b Nickname: 
+                    |  #{user.nickname}
+                    br
                     b Rank:
                     |  #{user.rankName}
                     br
