--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -13,7 +13,7 @@ header
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li
-            a(target="_blank", href="https://github.com/Apexal/ontrac/wiki", title="What features does OnTrac provide?") About
+            a(target="_blank", href="https://github.com/Apexal/ontrac/wiki/About-OnTrac", title="What features does OnTrac provide?") About
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') View 
                 span.caret
