--- a/views/courses/list.jade
+++ b/views/courses/list.jade
@@ -12,6 +12,8 @@ block content
         for c in courses
           .panel.panel-default
             .panel-body
+              if c.teacher
+                img.course-list-img.hidden-xs.left(src=c.teacher.ipicture, onError="this.onerror=null;this.src='"+c.teacher.mpicture+"';")
               h3
                 a.undecorated(href="/courses/"+c.mID)= c.title
                 if c.teacher
