--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -11,9 +11,9 @@ block content
       .page-header
         h1 #[b Teacher] #{teacher.fullName}
       .row
-        .col-xs-12.col-sm-2
-          img.teacher-profile-img(src=teacher.image)
-        .col-xs-12.col-sm-10
+        .col-xs-12.col-sm-3
+          img.teacher-profile-img(src=teacher.ipicture, onError="this.onerror=null;this.src='"+teacher.mpicture+"';")
+        .col-xs-12.col-sm-9
           if teacher.ratingCount > 0
             b Going by #{teacher.ratingCount} unique ratings, this teacher is #{teacher.ratingString}.
           else
