--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -3,14 +3,9 @@ extends /layout
 block content
   .container
     include /info
-    .alert.alert-danger Regis blocks profile images from loading when on their network.
-    //if loggedIn
-    //  h3 Online Now: 
-    //    small#online-user-list
-      
+
     .page-header
       h1(title="The cool guys.") Registered Users
-        
         if tableForm == false
           a.btn.btn-default.right(href="/users?table=1") Table Form
         else
@@ -40,7 +35,7 @@ block content
             for user in registered
               tr
                 td(style="vertical-align: middle;")
-                  img.table-pic(src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+                  img.table-pic(src=user.ipicture, onError="this.onerror=null;this.src='"+user.mpicture+"';")
                 td.larger(style="vertical-align: middle;")
                   a(href="/advisements/"+user.advisement)= user.advisement
                 td.larger(class=(loggedIn ? "user-badge" : ""), style="vertical-align: middle;", data-username=user.username)= user.fullName
@@ -50,7 +45,7 @@ block content
         for user in registered
           .col-xs-12.col-sm-6.col-md-4.col-lg-3.text-center.magictime.vanishIn
             .user-box
-              img(src="https://webeim.regis.org/photos/regis/Student/"+user.code+".jpg")
+              img(src=user.ipicture, onError="this.onerror=null;this.src='"+user.mpicture+"';")
               .btn-group.full-width
                 a.user-adv(href=(loggedIn ? "/advisements/"+user.advisement : "#"))= user.advisement
                 button.btn.btn-default.full-width(data-username=user.username, class=(loggedIn ? "user-badge" : ""), type="button")= user.fullName
@@ -70,10 +65,7 @@ block content
           for user in users
             tr(class=(currentUser && user.username == currentUser.username ? "success" : ""))
               td
-                if user.gradeName == "Freshman"
-                  img.table-pic(class=(loggedIn ? "user-badge" : ""), data-username=user.username, src=user.mpicture)
-                else 
-                  img.table-pic(class=(loggedIn ? "user-badge" : ""), data-username=user.username, src=user.ipicture)
+                img.table-pic(class=(loggedIn ? "user-badge" : ""), data-username=user.username, src=user.ipicture, onError="this.onerror=null;this.src='"+user.mpicture+"';")
               td.larger(style="vertical-align: middle;")
                 a.undecorated(href="/advisements/"+user.advisement)= user.advisement
               td.larger(style="vertical-align: middle")= user.gradeName
