--- a/views/home/homepage.jade
+++ b/views/home/homepage.jade
@@ -11,7 +11,7 @@ block content
     
     .row
       .col-xs-12
-        b.larger Looking to talk with classmates?
+        h3.no-margin Looking to talk with classmates?
         p.
           Install #[b #[a(target="_blank", href="http://wiki.mumble.info/wiki/Main_Page#Download_Mumble") Mumble]],
           a light-weight, free voice-chat application for communicating with classmates.
